Bug:  PRD Reviewer:  Self Comments:  Changes for GWT based binder views.  {212th} 1. Fixed the layout of the entry menu on IE.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/menu/PopupMenu.java
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/EntryMenuPanel.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtMenus.css
M    gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
@@ -45,15 +45,14 @@
 	/* ...End:  Description panel styles. */
 	
 	/* ...Start:  Entry menu panel styles. */
-		.vibe-entryMenu-configPanel         {display: inline-block; vertical-align: top;}
-		.vibe-entryMenu-filterOptions-panel {display: inline-block; vertical-align: top;}
-		.vibe-entryMenu-filtersPanel        {display: inline-block; vertical-align: top; padding-right: 8px; margin-top: 6px;}
+		.vibe-entryMenu-configPanel         {vertical-align: top;}
+		.vibe-entryMenu-filterOptions-panel {vertical-align: top;}
+		.vibe-entryMenu-filtersPanel        {vertical-align: top; padding-right: 8px; margin-top: 6px;}
 		.vibe-entryMenu-grid                {padding: 0px !important; background-color: #ededed; display: table; table-layout: fixed;}
-		.vibe-entryMenu-quickFilters-filter {display: inline-block;}
-		.vibe-entryMenu-quickFilters-panel  {display: inline-block; vertical-align: top; padding: 0 0 0 5px; margin-top: 3px; border-left: none; height: 19px; white-space: nowrap; background-color: #fff; border: 1px solid #b8b8b8; -moz-border-radius: 15px; -webkit-border-radius: 15px;}
-
-		.vibe-entryMenu-rightPanel          {display: inline; padding-right: 5px;}
-	/* ...End:  Entry menu panel styles. */
+		.vibe-entryMenu-quickFilters-filter {}
+		.vibe-entryMenu-quickFilters-panel  {vertical-align: top; padding: 0 0 0 5px; margin-top: 3px; border-left: none; height: 19px; white-space: nowrap; background-color: #fff; border: 1px solid #b8b8b8; -moz-border-radius: 15px; -webkit-border-radius: 15px;}
+		.vibe-entryMenu-rightPanel          {padding-right: 5px; margin-right: 3px;}
+/* ...End:  Entry menu panel styles. */
 	
 	/* ...Start:  Filter panel styles. */
 		.vibe-filterAnchor                 {cursor: pointer;}
